# minimax

./: .gitignore  boardclass.hs  common.hs  connectfour.hs  fourmolu.yaml  gofai.cabal  main.hs  main.py  minimax.cabal  minimax.hs  playable.hs  test.py  tree.hs
ConnectFour/: board.hs  game.hs
Tictactoe/: board.hs  game.hs
benchmark/: tictactoe.txt
common/: alphabeta.py  classic.py  game.py  iddfs.py
connectfour/: board.py  game.py
src/: common.hs  tester.hs  tree.hs
src/Connectfour/: board.hs  game.hs
src/Tictactoe/: board.hs  game.hs
tictactoe/: board.py  game.py
