cabal-version:      3.6
name:               minimax
version:            0.1.0

library
    exposed-modules:
      Tictactoe.Board,
      Tictactoe.Game,
      Connectfour.Board,
      Connectfour.Game

    -- Modules included in this library but not exported.
    other-modules:
      Common,
      Minimax,
      Playable,
      Tester,
      Tree

    build-depends:
      base ^>=4.16.4.0,
      containers,
      mtl

    hs-source-dirs:   src
    default-language: GHC2021

executable gofai
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        minimax

    hs-source-dirs:   app
    default-language: GHC2021
